*** HEAD CONTENT *****************************************************************
**********************************************************************************
  
  What's new in this drop
  ================================================================================
  
  PRs Fixed in this Release
  ================================================================================

  PRs Closed in this Release
  ===============================================================================
  1GKRLZ4: ITPJCORE:WIN2000 - Compiler overzealous with commas

**********************************************************************************
*** STABLE CONTENT (2.0 STREAM, v_202_01) ****************************************
**********************************************************************************
  
  What's new in this drop
  ================================================================================
  * OpenOnSelection can now locate selected declarations which have a corresponding
    Java element (i.e. no local declaration is found).
  
  PRs Fixed in this Release
  ================================================================================
  1GGNNDZ: ITPJCORE:WINNT - OpenOnSelection - non visible target is equivalent to no target
  1GE14NN: ITPJUI:WINNT - Unable to find/search for .class files
  1GJYFUO: ITPDUI:ALL - Evaluation hangs, evaluation thread is suspended
  1FWG453: ITPJCORE:WIN98 - OpenOnSelection - fails for default constructors
  1GDQD37: ITPJUI:WIN2000 - OpenOnSelection - Open on selection failure
  1GGZ2R7: ITPJUI:WIN2000 - Search for method refs failed
  1GKNXX6: ITPJCORE:WINNT - OpenOnSelection - no selection if targeting member type in default package
  1GE34EE: ITPJUI:WIN2000 - OpenOnSelection - initial selection wrong
  1GKEG73: ITPJCORE:WIN2000 - search (136): missing field declaration
  1GKB9YH: ITPJCORE:WIN2000 - search for field refs - incorrect results