@@ -160,6 +160,8 @@ codeAssist.nullRequestor = Requestor cannot be null.
 ### java conventions
 convention.unit.nullName = Compilation unit name must not be null.
 convention.unit.notJavaName = Compilation unit name must end with .java.
+convention.classFile.nullName = .class file name must not be null.
+convention.classFile.notJavaName = .class file name must end with .class.
 convention.illegalIdentifier = {0} is not a valid Java identifier.
 convention.import.nullImport = An import declaration must not be null.
 convention.import.unqualifiedImport = An import declaration must not end with an unqualified *.
